5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1637_2704.log
== TEST (2019-04-09 10:33:29) 
-- CODE:
n = float(input"nota de zero a dez: ")
b = iput(" receber bonificacao: ")
if (b == S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
File "XXXX", line 1
    n = float(input"nota de zero a dez: ")
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:06) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
if (b == S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:35:02) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ".upper())
if (b == S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:35:58) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper()
if (bo == S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bo == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:00) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo = S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
File "XXXX", line 4
    if (bo = S):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:04) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo == S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bo == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:32) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (S):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:33) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:51) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:41:09) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:21) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.upper
if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(bo)
-- OUTPUT:
<built-in method upper of str object at 0x7f7371903e30>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:48) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")
bo = b.u
if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    bo = b.u
AttributeError: 'str' object has no attribute 'u'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:00) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")

if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bo == "S"):
NameError: name 'bo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:10) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")

if (bo == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (bo == "S"):
NameError: name 'bo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:25) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")

if (b == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(b)
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:45) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")

if (b == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:43:53) 
-- CODE:
n = float(input("nota de zero a dez: "))
b = input(" receber bonificacao: ")

if (b == "S"):
	nf = n + ((10/100)*n)
else:
	nf = n
	
print(nf)
-- EXECUTION TIME:
0.122448
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
